--- a/src/comtab.css
+++ b/src/comtab.css
@@ -1,15 +1,27 @@
 .comtab-pane {
   min-width: 200px;
   width: 400px;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   background-color: yellow;
 }
 
+.comtab-pane-group {
+  position: absolute;
+}
+
 .comtab-pane_handle {
   background-color: green;
   height: 20px;
+}
+
+.comtab-pane-dropready {
+  opacity: .3;
+}
+
+.comtab-pane_gutter-active {
+  background-color: orange;
 }
 
 .comtab-tab_header-active {
@@ -41,6 +53,44 @@
   /* width: 500px;
   height: 300px; */
   background-color: violet;
+}
+
+.comtab-absorb {
+  position: absolute;
+}
+
+.comtab-absorb-horizontal {
+  width: 100%;
+  height: 7px;
+}
+
+.comtab-absorb-vertical {
+  width: 7px;
+  height: 100%;
+}
+
+.comtab-absorb-active {
+  background-color: orange;
+}
+
+.comtab-absorb_top {
+  top: -5px;
+  left: 0;
+}
+
+.comtab-absorb_bottom {
+  bottom: -5px;
+  left: 0;
+}
+
+.comtab-absorb_left {
+  top: 0;
+  left: -5px;
+}
+
+.comtab-absorb_right {
+  top: 0;
+  right: -5px;
 }
 
 html, body, .comtab-stage {
