--- a/src/comtab.css
+++ b/src/comtab.css
@@ -1,27 +1,42 @@
+.comtab-stage {
+  position: relative;
+  background-color: #4d4d4d;
+}
+
 .comtab-pane {
   min-width: 200px;
   width: 400px;
   position: absolute;
   left: 0;
   top: 0;
-  background-color: yellow;
-}
-
-.comtab-disable {
-  display: none;
+  /* background-color: #484848; */
+  background-color: #535353;
+  border: 1px solid #383838;
+  box-shadow: 0 0 1px 1px#232323;
+  cursor: default;
+  box-sizing: border-box;
 }
 
 .comtab-pane-group {
+  display: table;
   position: absolute;
+  /* box-shadow: 0 0 1px 1px#232323; */
+  box-sizing: border-box;
 }
 
 .comtab-pane-group_column {
-  position: absolute;
+  position: relative;
+  display: table-cell;
+}
+
+.comtab-pane-group_column .comtab-pane {
+  /* border: 0; */
+  box-shadow: unset;
 }
 
 .comtab-pane_handle {
-  background-color: green;
-  height: 20px;
+  background-color: #373737;
+  height: 12px;
 }
 
 .comtab-pane-dropready {
@@ -29,19 +44,29 @@
 }
 
 .comtab-pane_gutter-active {
-  background-color: orange;
+  background-color: #0d64d2;
+}
+
+.comtab-tab_header {
+  position: relative;
+  background-color: #424242;
 }
 
 .comtab-tab_header-active {
-  background: orange;
+  background: #0d64d2;
 }
 
-.comtab-tab {
-  background-color: blue;
+.comtab-tab_header_droppable {
+  position: absolute;
+  top: 2px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  z-index: -1;
 }
 
 .comtab-tab_content {
   display: none;
+  padding: 10px 4px;
 }
 
 .comtab-tab_content-active {
@@ -49,56 +74,54 @@
 }
 
 .comtab-tab_btn {
-  background-color: white;
+  display: inline-block;
+  padding: 4px 6px;
+  color: #f0f0f0;
+  background-color: #484848;
 }
 
 .comtab-tab_btn-active {
-  opacity: .9;
-}
-
-.comtab-stage {
-  position: relative;
-  /* width: 500px;
-  height: 300px; */
-  background-color: violet;
+  background-color: #535353;
 }
 
 .comtab-absorb {
   position: absolute;
+  z-index: 99;
 }
 
 .comtab-absorb-horizontal {
   width: 100%;
-  height: 7px;
+  height: 2px;
 }
 
 .comtab-absorb-vertical {
-  width: 7px;
+  width: 2px;
   height: 100%;
 }
 
 .comtab-absorb-active {
-  background-color: orange;
+  background-color: #0d64d2;
+  /* box-shadow: 0 0 4px 1px #0d64d2; */
 }
 
 .comtab-absorb_top {
-  top: -5px;
+  top: -2px;
   left: 0;
 }
 
 .comtab-absorb_bottom {
-  bottom: -5px;
+  bottom: -2px;
   left: 0;
 }
 
 .comtab-absorb_left {
   top: 0;
-  left: -5px;
+  left: -2px;
 }
 
 .comtab-absorb_right {
   top: 0;
-  right: -5px;
+  right: -2px;
 }
 
 html, body, .comtab-stage {
