--- a/lib/styles/comtab.css
+++ b/lib/styles/comtab.css
@@ -1,11 +1,12 @@
 .comtab-stage {
   position: relative;
   background-color: #4d4d4d;
+  overflow: hidden;
 }
-
-.comtab-pane {
+  
+.comtab-panel {
   width: 200px;
-  position: absolute;
+  position: absolute !important;
   left: 0;
   top: 0;
   /* background-color: #484848; */
@@ -17,33 +18,33 @@
   box-sizing: border-box;
 }
 
-.comtab-pane-group {
+.comtab-panel-group {
   display: table;
   position: absolute;
-  box-shadow: 0 0 1px 1px#232323;
+  /* box-shadow: 0 0 1px 1px#232323; */
   box-sizing: border-box;
 }
 
-.comtab-pane-group_column {
+.comtab-panel-group_column {
   position: relative;
   display: table-cell;
 }
 
-.comtab-pane-group_column .comtab-pane {
+.comtab-panel-group_column .comtab-panel {
   /* border: 0; */
   box-shadow: unset;
 }
 
-.comtab-pane_handle {
+.comtab-panel_handle {
   background-color: #373737;
   height: 12px;
 }
 
-.comtab-pane-dropready {
+.comtab-panel-dropready {
   opacity: .3;
 }
 
-.comtab-pane_gutter-active {
+.comtab-panel_gutter-active {
   background-color: #0d64d2;
 }
 
@@ -132,3 +133,4 @@ html, body, .comtab-stage {
   margin: 0;
   padding: 0;
 }
+  
